test/files/neg/minimal_not-a-trait.check
minimal_not-a-trait.scala:3: error: @minimal annotations may only be applied to traits
@minimal("foo")
 ^
minimal_not-a-trait.scala:8: error: @minimal annotations may only be applied to traits
@minimal("foo")
 ^
two errors found
